frontend/test/should_pass/attrib_013.grg
using attrib_model_001;

rule r {
	nb : NBOOL;
	-eb:EBOOL->;

	modify {
		eval {
			nb.a = true;
			eb.a = false;

			nb.a = nb.a == eb.a;
			nb.a = nb.a != eb.a;
			nb.a = nb.a && eb.a;
			nb.a = nb.a || eb.a;
		}
	}
}

