frontend/test/should_fail/minmax_002.grg
using attrib_model_001;

rule r {
	nb : NBOOL;
	-eb:EBOOL->;

	modify {
		eval {
			nb.a = min(nb.a, eb.a);
			nb.a = max(nb.a, eb.a);
		}
	}
}

